# obsidian_meta_tool

./: .coverage  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  rascunho.py  rascunho_2.py
arquive/: operations_database.py  sql_to_dataframe.py  task_create_database.py  task_process_config.py  task_update_database.py  test_data_serialization.py  variables.py
arquive/test_files/: common_file_1.md  common_file_3.md  common_file_4.md  goal_file_1.md  no_frontmatter_file.md  no_frontmatter_file_2.md  simple_file_1.md
data/: arquivo_de_teste_1.md  general_dataframe.parquet
data/.obsidian/: types.json  workspace.json
data/dataframes/: general_dataframe.csv
drafts/: database_action.py  my_vault_paths.py  rascunho.py  sql_to_dataframe_process.py  yaml_dumper_use.py
src/: yaml_dump.py
src/obsidian_meta_tool/: cli.py  yaml_parser.py
src/obsidian_meta_tool/config/: config.ini  config_example.ini  config_structuration.py  constants.py  paths.py
src/obsidian_meta_tool/database/: create_database.py  data_serialization.py  database_creation.py  notes_categories_creation.py  notes_id.py  notes_id_creation.py  operations_database.py  sql_to_dataframe.py  validate_database.py  variables.py
tests/: test_config_structuration.py  test_data_serialization.py  test_frontmatter_dict_handler.py  test_frontmatter_utils.py  test_lines_utils.py  test_read.py  test_write.py  test_yaml_dumper.py  test_yaml_parser.py
tests/test_files/: empty_frontmatter_file.md  goal_file_1.md  no_frontmatter_file.md  unclosed_frontmatter_file.md
(+22 files in other folders)
